@@ -169,19 +169,18 @@ buffer."
                (backward-char))
              (point))))))
 
-(defun eclim--completion-action-java ()
-  (let* ((end (point))
-         (completion (buffer-substring-no-properties eclim--completion-start end)))
+(defun eclim--completion-action-java (beg end)
+  (let ((completion (buffer-substring-no-properties beg end)))
     (cond ((string-match "\\(.*?\\) :.*- Override method" completion)
            (let ((sig (eclim--java-parse-method-signature (match-string 1 completion))))
-             (delete-region eclim--completion-start end)
+             (delete-region beg end)
              (eclim-java-implement (symbol-name (assoc-default :name sig)))))
           ((string-match "\\([^-:]+\\) .*?\\(- *\\(.*\\)\\)?" completion)
            (let* ((insertion (match-string 1 completion))
                   (rest (match-string 3 completion))
                   (package (if (and rest (string-match "\\w+\\(\\.\\w+\\)*" rest)) rest nil))
                   (template (eclim--completion-yasnippet-convert insertion)))
-             (delete-region eclim--completion-start end)
+             (delete-region beg end)
              (if (and eclim-use-yasnippet template (featurep 'yasnippet) yas-minor-mode)
                  (yas/expand-snippet template)
                (insert insertion))
@@ -190,14 +189,13 @@ buffer."
                 (concat package "." (substring insertion 0 (or (string-match "[<(]" insertion)
                                                                (length insertion)))))))))))
 
-(defun eclim--completion-action-xml ()
-  (when (string-match "[\n[:blank:]]" (char-to-string (char-before eclim--completion-start)))
+(defun eclim--completion-action-xml (beg end)
+  (when (string-match "[\n[:blank:]]" (char-to-string (char-before beg)))
     ;; we are completing an attribute; let's use yasnippet to get som nice completion going
-    (let* ((end (point))
-           (c (buffer-substring-no-properties eclim--completion-start end))
+    (let* ((c (buffer-substring-no-properties beg end))
            (completion (if (s-ends-with? "\"" c) c (concat c "=\"\""))))
       (when (string-match "\\(.*\\)=\"\\(.*\\)\"" completion)
-        (delete-region eclim--completion-start end)
+        (delete-region beg end)
         (if (and eclim-use-yasnippet (featurep 'yasnippet)  yas-minor-mode)
             (yas/expand-snippet (format "%s=\"${1:%s}\" $0" (match-string 1 completion) (match-string 2 completion)))
           (insert completion))))))
@@ -211,12 +209,12 @@ buffer."
         (insert ")")
         (backward-char)))))
 
-(defun eclim--completion-action ()
+(defun eclim--completion-action (beg end)
   (case major-mode
-    ('java-mode (eclim--completion-action-java))
-    ('groovy-mode (eclim--completion-action-java))
-    ((c-mode c++-mode) (eclim--completion-action-java))
-    ('nxml-mode (eclim--completion-action-xml))
+    ('java-mode (eclim--completion-action-java beg end))
+    ('groovy-mode (eclim--completion-action-java beg end))
+    ((c-mode c++-mode) (eclim--completion-action-java beg end))
+    ('nxml-mode (eclim--completion-action-xml beg end))
     (t (eclim--completion-action-default))))
 
 (defun eclim--render-doc (str)
